# drf_auth_task

./: main.py  pyproject.toml
src/: db.sqlite3
src/books_store/: models.py
src/books_store/api/: serializers.py  urls.py  viewsets.py
src/books_store/migrations/: 0001_initial.py  0002_alter_book_id.py  0003_alter_book_title.py
src/custom_auth/: apps.py  middleware.py  models.py  security.py  usecases.py
src/custom_auth/api/: serializers.py  urls.py  viewsets.py
src/custom_auth/migrations/: 0001_initial.py  0002_refreshjwt.py
src/src/: settings.py  urls.py
